--- a/.github/workflows/deploy_on_vercel.yml
+++ b/.github/workflows/deploy_on_vercel.yml
@@ -9,13 +9,19 @@ on:
 jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
+    environment: deploy_on_vercel
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
+
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+
       - name: Build Project Artifacts
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+        
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
