:rocket:fix missing instructions for Vercel for deploying app

--- a/.github/workflows/deploy_on_vercel.yml
+++ b/.github/workflows/deploy_on_vercel.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Install Dependencies
         run: npm install --only=production
-        working-directory: .
+        working-directory: App
 
       - name: Show Build Output
         run: ls -al dist
