--- a/.github/workflows/deploy_on_vercel.yml
+++ b/.github/workflows/deploy_on_vercel.yml
@@ -1,11 +1,14 @@
 name: Vercel Preview Deployment
+
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+
 on:
   push:
     branches-ignore:
       - main
+
 jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
@@ -14,8 +17,8 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v4
 
-      - name: Use the right working directory
-        run: ls -al 
+      - name: Show Repository Structure (Debug)
+        run: ls -al  # Vérifie si "App/" est bien là
 
       - name: Install Node.js
         uses: actions/setup-node@v4
@@ -24,22 +27,27 @@ jobs:
 
       - name: Install Dependencies
         run: npm install --only=production
-        working-directory: App
-
-      - name: Show Build Output
-        run: ls -al dist
+        working-directory: App  # ✅ Ajout du working directory
 
       - name: Build Project
         run: npm run build
-      
+        working-directory: App  # ✅ Ajout du working directory
+
+      - name: Show Build Output (Debug)
+        run: ls -al
+        working-directory: App/dist  # ✅ Vérifier si `dist/` est bien créé
+
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
 
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+        working-directory: App  # ✅ Ajout du working directory
 
       - name: Build Project Artifacts
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+        working-directory: App  # ✅ Ajout du working directory
 
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+        working-directory: App  # ✅ Ajout du working directory
