:rocket:fix delting step in GA

--- a/.github/workflows/deploy_on_vercel.yml
+++ b/.github/workflows/deploy_on_vercel.yml
@@ -45,5 +45,5 @@ jobs:
         working-directory: App 
 
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel --prod --token=${{ secrets.VERCEL_TOKEN }}
         working-directory: App 
