--- a/.github/workflows/deploy_on_vercel.yml
+++ b/.github/workflows/deploy_on_vercel.yml
@@ -35,15 +35,15 @@ jobs:
 
       - name: Show Build Output (Debug)
         run: ls -al
-        working-directory: App/dist 
+        working-directory: ./dist 
 
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
 
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
-        working-directory: App 
+        working-directory: ./dist 
 
       - name: Deploy Project Artifacts to Vercel
         run: vercel --prod --token=${{ secrets.VERCEL_TOKEN }}
-        working-directory: App 
+        working-directory: ./dist 
