--- a/.github/workflows/deploy_on_vercel.yml
+++ b/.github/workflows/deploy_on_vercel.yml
@@ -42,8 +42,8 @@ jobs:
 
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
-        working-directory: dist 
+        working-directory: App 
 
       - name: Deploy Project Artifacts to Vercel
         run: vercel --prod --token=${{ secrets.VERCEL_TOKEN }}
-        working-directory: dist 
+        working-directory: App 
