--- a/App/package.json
+++ b/App/package.json
@@ -24,8 +24,8 @@
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
-    "vite": "^5.4.10",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "vite": "^5.4.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -53,7 +53,6 @@
     "sass-embedded": "^1.81.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    
     "vitest": "^3.0.4"
   }
 }
