--- a/.github/workflows/deploy_on_vercel.yml
+++ b/.github/workflows/deploy_on_vercel.yml
@@ -18,7 +18,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Debug - Vérifier la structure du repo
-        run: ls -al  # ✅ Vérifie que "App/" est bien là
+        run: ls -al
+        working-directory: App  # ✅ Vérifie si "App/" contient bien les fichiers du projet
 
       - name: Install Node.js
         uses: actions/setup-node@v4
@@ -26,19 +27,24 @@ jobs:
           node-version: 20 
 
       - name: Install Dependencies
-        run: npm install  # ✅ On installe à la racine
+        run: npm install
+        working-directory: App  # ✅ On installe bien dans App/
 
       - name: Build Project
-        run: npm run build  # ✅ On build à la racine
+        run: npm run build
+       
 
       - name: Debug - Vérifier le contenu du build
-        run: ls -al App/dist  # ✅ Vérifie si "dist/" est bien généré
+        run: ls -al
+        
 
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
 
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+        
 
       - name: Deploy Project Artifacts to Vercel
         run: vercel --prod --token=${{ secrets.VERCEL_TOKEN }}
+        
