--- a/.github/workflows/deploy_on_vercel.yml
+++ b/.github/workflows/deploy_on_vercel.yml
@@ -18,8 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Debug - Vérifier la structure du repo
-        run: ls -al
-        working-directory: App  # ✅ Vérifie si "App/" contient bien les fichiers du projet
+        run: ls -al  # ✅ Vérifie la structure des dossiers
 
       - name: Install Node.js
         uses: actions/setup-node@v4
@@ -27,24 +26,19 @@ jobs:
           node-version: 20 
 
       - name: Install Dependencies
-        run: npm install
-        working-directory: App  # ✅ On installe bien dans App/
+        run: npm install  
 
       - name: Build Project
-        run: npm run build
-       
+        run: npm run build 
 
       - name: Debug - Vérifier le contenu du build
-        run: ls -al
-        
+        run: ls -al App/dist
 
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
 
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
-        
 
       - name: Deploy Project Artifacts to Vercel
         run: vercel --prod --token=${{ secrets.VERCEL_TOKEN }}
-        
