--- a/.github/workflows/deploy_on_vercel.yml
+++ b/.github/workflows/deploy_on_vercel.yml
@@ -25,6 +25,9 @@ jobs:
         with:
           node-version: 20 
 
+      - name: Debug - Vérifier package.json et scripts npm
+        run: npm run
+        working-directory: App
       - name: Install Dependencies
         run: npm install  
 
