--- a/.github/workflows/deploy_on_vercel.yml
+++ b/.github/workflows/deploy_on_vercel.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm run
         working-directory: App
       - name: Install Dependencies
-        run: npm install  
+        run: npm ci
 
       - name: Build Project
         run: npm run build 
