:adhesive_bandage: fix router

--- a/App/vercel.json
+++ b/App/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/assets/(.*)",
-      "destination": "/assets/:1"
+      "destination": "/assets/$1"
     },
     {
       "source": "/(.*)",
