--- a/App/vercel.json
+++ b/App/vercel.json
@@ -1,5 +1,10 @@
 {
-  "rewrites":  [
-    {"source": "/(.*)", "destination": "/"}
-  ]
+  "redirects": [
+    { "source": "/(.*)", "destination": "/", "permanent": false }
+  ],
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
