--- a/App/vercel.json
+++ b/App/vercel.json
@@ -1,9 +1,7 @@
 {
- "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+  "rewrites":  [
+    {"source": "/(.*)", "destination": "/"}
   ],
-  
-  
   "buildCommand": "npm run build",
   "installCommand": "npm install",
   "env": {
