:adhesive_bandage: fix 404 error

--- a/App/vercel.json
+++ b/App/vercel.json
@@ -1,6 +1,9 @@
 {
-  "rewrites":  [
-    {"source": "/(.*)", "destination": "/"}
+  "routes": [
+    {
+      "src": "/[^.]+",
+      "dest": "/"
+    }
   ],
   "buildCommand": "npm run build",
   "installCommand": "npm install",
