--- a/App/vercel.json
+++ b/App/vercel.json
@@ -1,5 +1,10 @@
 {
-  "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
-  ]
+  "rewrites":  [
+    {"source": "/(.*)", "destination": "/"}
+  ],
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
