:white_check_mark: adding cypress and unit test for app

--- a/App/dockerfile
+++ b/App/dockerfile
@@ -1,13 +1,12 @@
 # Étape 1 : Builder l'application
 FROM node:20-alpine AS builder
 
-ARG VITE_API_URL
-ARG VPS_EMAIL
-ARG DOMAIN
-ARG VPS_API_URL
-ARG VPS_APP_URL
-ARG VITE_URL_PHOTO
-
+# ARG VITE_API_URL
+# ARG VPS_EMAIL
+# ARG DOMAIN
+# ARG VPS_API_URL
+# ARG VPS_APP_URL
+# ARG VITE_URL_PHOTO
 
 # Définir le répertoire de travail
 WORKDIR /usr/src/App
@@ -17,29 +16,29 @@ COPY package*.json ./
 
 # Installer les dépendances
 # RUN npm install
-RUN npm ci --only=production
+RUN npm ci --only=development
 
 # Copier tout le code source
 COPY . .
 
-
 # Construire l'application
-RUN VITE_URL_PHOTO=${VITE_URL_PHOTO} VPS_TRAEFIK_URL=${VPS_TRAEFIK_URL}  VPS_ADMINER_URL=${VPS_ADMINER_URL}  VPS_API_URL=${VPS_API_URL} VPS_EMAIL=${VPS_EMAIL}  VPS_APP_URL=${VPS_APP_URL} VITE_API_URL=${VITE_API_URL}  DOMAIN=${DOMAIN} npm run build
+# RUN VITE_URL_PHOTO=${VITE_URL_PHOTO} VPS_TRAEFIK_URL=${VPS_TRAEFIK_URL}  VPS_ADMINER_URL=${VPS_ADMINER_URL}  VPS_API_URL=${VPS_API_URL} VPS_EMAIL=${VPS_EMAIL}  VPS_APP_URL=${VPS_APP_URL} VITE_API_URL=${VITE_API_URL}  DOMAIN=${DOMAIN} npm run build
 # RUN npm run build
 
-# Étape 2 : Créer l'image finale avec les fichiers construits
-FROM node:20-alpine
+# # Étape 2 : Créer l'image finale avec les fichiers construits
+# FROM node:20-alpine
 
-# Définir le répertoire de travail pour le serveur
-WORKDIR /usr/src/App
+# # Définir le répertoire de travail pour le serveur
+# WORKDIR /usr/src/App
 
-# Installer le serveur serve
-RUN npm install -g serve
+# # Installer le serveur serve
+# RUN npm install -g serve
 
-# Copier les fichiers construits depuis l'étape précédente
-COPY --from=builder /usr/src/App/dist ./dist
+# # Copier les fichiers construits depuis l'étape précédente
+# COPY --from=builder /usr/src/App/dist ./dist
 # Exposer le port
-EXPOSE 4173
+EXPOSE 5173
 
 # Démarrer l'application avec serve
-CMD ["serve", "-l", "4173", "-s", "dist"]
+# CMD ["serve", "-l", "4173", "-s", "dist"]
+CMD ["npm", "run", "dev"]
