--- a/Api/dockerfile
+++ b/Api/dockerfile
@@ -7,7 +7,7 @@ COPY package*.json ./
 RUN apk update && apk add openssl
 
 # RUN npm install
-RUN npm ci --only=production
+RUN npm ci --only=development
 
 COPY . .
 
@@ -17,4 +17,4 @@ RUN npx prisma generate
 
 EXPOSE 3000
 
-CMD ["npm", "run", "start:prod"]
+CMD ["npm", "run", "start:dev"]
