--- a/Api/dockerfile
+++ b/Api/dockerfile
@@ -1,17 +1,17 @@
-FROM node:20-alpine
+FROM node:20
 
+ENV NODE_TLS_REJECT_UNAUTHORIZED=0
 WORKDIR /usr/src/api
 
 COPY package*.json ./
-
-RUN apk update && apk add openssl
+# RUN apk update && apk add openssl
 
 # RUN npm install
 RUN npm ci --only=development
 
 COPY . .
 
-RUN npm run build
+# RUN npm run build
 
 RUN npx prisma generate
 
