--- a/Api/package.json
+++ b/Api/package.json
@@ -39,6 +39,7 @@
     "crypto-js": "^4.2.0",
     "crypto-random-string": "^5.0.0",
     "email-validator": "^2.0.4",
+    "helmet": "^8.0.0",
     "password-validator": "^5.3.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
